--- a/css/nc.css
+++ b/css/nc.css
@@ -88,7 +88,7 @@ a:active
     text-align: left;
 }
 
-blockquote {
+.blockquote {
     display: block;
     margin-top: 1em;
     margin-bottom: 1em;
