--- a/css/nc.css
+++ b/css/nc.css
@@ -142,6 +142,26 @@ a:active
     /*height: 1.6em;*/
 }
 
+@media (max-width: 600px) {
+    .tnav a:link,
+    .tnav a:visited,
+    .tnav a:hover,
+    .tnav a:active
+    {
+        font-size: 1.5em;
+    }
+}
+
+@media (max-width: 400px) {
+    .tnav a:link,
+    .tnav a:visited,
+    .tnav a:hover,
+    .tnav a:active
+    {
+        font-size: 1.3em;
+    }
+}
+
 .tnav a:hover
 {
     background-color: #FFECA9;
@@ -179,6 +199,27 @@ a:active
     /*font-size: 1.6em;*/
     font-size: 2.3em;
 }
+
+@media (max-width: 600px) {
+    .tnav a.current:link,
+    .tnav a.current:visited,
+    .tnav a.current:hover,
+    .tnav a.current:active
+    {
+        font-size: 1.7em;
+    }
+}
+
+@media (max-width: 400px) {
+    .tnav a.current:link,
+    .tnav a.current:visited,
+    .tnav a.current:hover,
+    .tnav a.current:active
+    {
+        font-size: 1.5em;
+    }
+}
+
 
 .bnav {
     text-align: center;
