--- a/entingfest/css/entingfest.css
+++ b/entingfest/css/entingfest.css
@@ -6,14 +6,14 @@ html {
 }
 
 body {
-    background-color: #E0FFF5;
+    background-color: #EBF5FF;
     height: 100%;
-    color: #7A3D99;
+    color: #000000;
     margin: 0em;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: #A352CC;
+    color: #000052;
 }
 
 button {
@@ -54,7 +54,7 @@ a:visited,
 a:hover,
 a:active
 {
-    color: #5500FF;
+    color: #0000B8;
     text-decoration: none;
     padding: 0;
 }
@@ -68,7 +68,7 @@ a:active
 }
 
 #contentblock {
-    color: #0F002C;
+    color: #000000;
     text-align: center;
     padding-left: 4%;
     padding-right: 4%;
@@ -106,10 +106,10 @@ a:active
     width: 100%;
     height: 3em;
     /*color: #2F008C;*/
-    background: -webkit-linear-gradient(#66FFCC, #E0FFF5); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#66FFCC, #E0FFF5); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#66FFCC, #E0FFF5); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#66FFCC, #E0FFF5); /* Standard syntax */
+    background: -webkit-linear-gradient(#8AB8E6, #EBF5FF); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#8AB8E6, #EBF5FF); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#8AB8E6, #EBF5FF); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#8AB8E6, #EBF5FF); /* Standard syntax */
 }
 
 h1 img
@@ -144,9 +144,9 @@ h1 img
     height: 3em;
     /*height: 6em;*/
     /*color: #2F008C;*/
-    background: -webkit-linear-gradient(#E0FFF5, #66FFCC); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#E0FFF5, #66FFCC); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#E0FFF5, #66FFCC); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#E0FFF5, #66FFCC); /* Standard syntax */
+    background: -webkit-linear-gradient(#EBF5FF, #8AB8E6); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#EBF5FF, #8AB8E6); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#EBF5FF, #8AB8E6); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#EBF5FF, #8AB8E6); /* Standard syntax */
 }
 
