--- a/css/nc.css
+++ b/css/nc.css
@@ -118,11 +118,12 @@ a:active
     display: block;
     width: 100%;
     height: 7em;
+    background: #FFF7DA;
     /*color: #2F008C;*/
-    background: -webkit-linear-gradient(#FFC80A, #FFF7DA); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#FFC80A, #FFF7DA); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#FFC80A, #FFF7DA); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#FFC80A, #FFF7DA); /* Standard syntax */
+    /* background: -webkit-linear-gradient(#FFC80A, #FFF7DA); /1* For Safari 5.1 to 6.0 *1/ */
+    /* background: -o-linear-gradient(#FFC80A, #FFF7DA); /1* For Opera 11.1 to 12.0 *1/ */
+    /* background: -moz-linear-gradient(#FFC80A, #FFF7DA); /1* For Firefox 3.6 to 15 *1/ */
+    /* background: linear-gradient(#FFC80A, #FFF7DA); /1* Standard syntax *1/ */
 }
 
 .tnav {
