--- a/brak/css/brak.css
+++ b/brak/css/brak.css
@@ -174,7 +174,7 @@ h1 img
     font-style: normal;
 }
 
-@media all and (min-width: 0px) and (max-width: 599px) {
+@media screen and (min-width: 0px) and (max-width: 599px) {
     .desktop {
         display: none;
     }
@@ -182,7 +182,8 @@ h1 img
         display: block;
     }
 }
-@media all and (min-width: 600px) {
+
+@media screen and (min-width: 600px) {
     .desktop {
         display: block;
     }
